--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,10 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3083AC</color>
+
+    <color name="background">#3083AC</color>
+    <color name="light">#90caf9</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
