--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
     android:background="@color/background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.rajatgoyal.puzzle15.MainActivity">
+    tools:context="com.rajatgoyal.puzzle15.ui.MainActivity">
 
     <TextView
         android:id="@+id/toolbar"
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@color/light"
-                android:text="New Game"
+                android:text="@string/new_game"
                 android:textAllCaps="false"
                 android:textColor="@color/background"
                 android:textSize="24sp" />
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@color/light"
-                android:text="High Score"
+                android:text="@string/high_score"
                 android:textAllCaps="false"
                 android:textColor="@color/background"
                 android:textSize="24sp" />
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@color/light"
-                android:text="Rules"
+                android:text="@string/rules"
                 android:textAllCaps="false"
                 android:textColor="@color/background"
                 android:textSize="24sp" />
