--- a/app/src/main/res/layout/dialog_high_score.xml
+++ b/app/src/main/res/layout/dialog_high_score.xml
@@ -1,80 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:layout_gravity="center">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_gravity="top"
+        android:layout_weight="0"
+        android:background="@color/light"
+        android:gravity="center_horizontal"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="@string/high_scores"
+        android:textColor="@color/background"
+        android:textSize="30sp" />
 
-        <TextView
-            android:layout_weight="1"
-            android:text="Moves:"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_weight="1"
-            android:id="@+id/moves_hs"
-            android:text="0"
-            android:textSize="30sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="0dp"
-            android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:padding="10dp"
+        android:id="@+id/high_scores_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:layout_weight="1"
-            android:text="Time:"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginLeft="15dp"
-            android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:layout_weight="1"
-            android:id="@+id/timer_hs"
-            android:text="00:00:00"
-            android:textSize="30sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="0dp"
-            android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center" />
 
 </LinearLayout>
