--- a/app/src/main/res/layout/widget_list_item2.xml
+++ b/app/src/main/res/layout/widget_list_item2.xml
@@ -3,23 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:background="@color/white"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/username"
         android:fontFamily="sans-serif"
-        android:textSize="20sp"
-        android:textColor="@color/background"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         tools:text="rajatgoyal715" />
 
     <LinearLayout
         android:id="@+id/details"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:orientation="vertical">
@@ -27,7 +29,7 @@
         <TextView
             android:id="@+id/moves"
             android:fontFamily="monospace"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
