--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -9,7 +9,8 @@
     tools:context="com.rajatgoyal.puzzle15.ui.GameActivity">
 
     <android.support.v7.widget.CardView
-        android:layout_width="400dp"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="10dp">
 
@@ -214,9 +215,8 @@
     </android.support.v7.widget.CardView>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -235,7 +235,7 @@
                 android:textColor="@color/background"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="Moves" />
+                android:text="@string/moves" />
 
             <View
                 android:layout_width="100dp"
@@ -268,7 +268,7 @@
                 android:textColor="@color/background"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                tools:text="Time" />
+                android:text="@string/time" />
 
             <View
                 android:layout_width="150dp"
