--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -26,56 +26,101 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:layout_margin="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:contentDescription="@string/app_logo"
             android:src="@drawable/icon" />
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/newGame"
-                android:layout_width="200dp"
+            <TextView
+                android:id="@+id/welcome_message"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@color/light"
-                android:text="@string/new_game"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="24sp" />
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                tools:text="Welcome Rajat" />
 
-            <Button
-                android:id="@+id/highScore"
-                android:layout_width="200dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@color/light"
-                android:text="@string/high_score"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="24sp" />
+                android:gravity="center">
 
-            <Button
-                android:id="@+id/help"
-                android:layout_width="200dp"
+                <Button
+                    android:id="@+id/newGame"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@color/light"
+                    android:text="@string/new_game"
+                    android:textAllCaps="false"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/highScore"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@color/light"
+                    android:text="@string/high_score"
+                    android:textAllCaps="false"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/leaderboard"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@color/light"
+                    android:text="@string/leaderboard"
+                    android:textAllCaps="false"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/help"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="@color/light"
+                    android:text="@string/rules"
+                    android:textAllCaps="false"
+                    android:textColor="@color/background"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/login_message"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:background="@color/light"
-                android:text="@string/rules"
-                android:textAllCaps="false"
-                android:textColor="@color/background"
-                android:textSize="24sp" />
+                android:text="@string/signIn"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
