--- a/app/src/main/res/layout/high_score_list_item.xml
+++ b/app/src/main/res/layout/high_score_list_item.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_weight="1"
-            android:text="Moves:"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="0dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="@string/moves_label"
             android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/moves_hs"
-            tools:text="0"
-            android:textSize="24sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="0dp"
-            android:textColor="@color/background"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:textColor="@color/background"
+            android:textSize="24sp"
+            tools:text="0" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_weight="1"
-            android:text="Time:"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="0dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="@string/time_label"
             android:textColor="@color/background"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_weight="1"
             android:id="@+id/timer_hs"
-            tools:text="00:00:00"
-            android:textSize="24sp"
-            android:gravity="left"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="0dp"
-            android:textColor="@color/background"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:textColor="@color/background"
+            android:textSize="24sp"
+            tools:text="00:00:00" />
     </LinearLayout>
 
     <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:background="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="1dp" />
+        android:background="@color/black" />
 
 </LinearLayout>
