--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -8,7 +8,7 @@
     android:orientation="horizontal"
     tools:context="com.rajatgoyal.puzzle15.ui.GameActivity">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -212,7 +212,7 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="wrap_content"
