--- a/app/src/main/res/layout/dialog_high_score.xml
+++ b/app/src/main/res/layout/dialog_high_score.xml
@@ -17,7 +17,7 @@
         android:textColor="@color/background"
         android:textSize="28sp" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:padding="10dp"
         android:id="@+id/high_scores_list"
         android:layout_width="match_parent"
