--- a/app/src/main/res/layout-land/activity_game.xml
+++ b/app/src/main/res/layout-land/activity_game.xml
@@ -6,213 +6,8 @@
     android:background="@color/white"
     android:gravity="center"
     android:orientation="horizontal"
+    android:padding="20dp"
     tools:context="com.rajatgoyal.puzzle15.ui.GameActivity">
-
-    <androidx.cardview.widget.CardView
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btn00"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="@color/background"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="1" />
-
-                <Button
-                    android:id="@+id/btn01"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:background="@color/light"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="2" />
-
-                <Button
-                    android:id="@+id/btn02"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="3" />
-
-                <Button
-                    android:id="@+id/btn03"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="4" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btn10"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="1" />
-
-                <Button
-                    android:id="@+id/btn11"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="2" />
-
-                <Button
-                    android:id="@+id/btn12"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="3" />
-
-                <Button
-                    android:id="@+id/btn13"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="4" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btn20"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="1" />
-
-                <Button
-                    android:id="@+id/btn21"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="2" />
-
-                <Button
-                    android:id="@+id/btn22"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="3" />
-
-                <Button
-                    android:id="@+id/btn23"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="4" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/btn30"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="1" />
-
-                <Button
-                    android:id="@+id/btn31"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="2" />
-
-                <Button
-                    android:id="@+id/btn32"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="3" />
-
-                <Button
-                    android:id="@+id/btn33"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    tools:text="4" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -222,9 +17,8 @@
 
         <LinearLayout
             android:layout_weight="1"
-            android:layout_marginTop="80dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -250,14 +44,13 @@
                 android:gravity="center"
                 android:textColor="@color/background"
                 android:textSize="30sp"
-                tools:text="0" />
+                android:text="@string/initial_moves" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_weight="1"
-            android:layout_marginBottom="80dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -287,5 +80,146 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn30"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn31"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn32"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+                <com.rajatgoyal.puzzle15.view.Tile
+                    android:id="@+id/btn33"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="1dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
