--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -14,12 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:padding="20dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
             android:layout_weight="1"
             android:contentDescription="@string/app_logo"
             android:src="@drawable/icon" />
@@ -31,40 +31,40 @@
             android:gravity="center"
             android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/newGame"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:background="@color/light"
-                    android:text="@string/new_game"
-                    android:textAllCaps="false"
-                    android:textColor="@color/background"
-                    android:textSize="20sp" />
+            <Button
+                android:id="@+id/newGame"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@color/light"
+                android:text="@string/new_game"
+                android:textAllCaps="false"
+                android:textColor="@color/background"
+                android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/highScore"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:background="@color/light"
-                    android:text="@string/high_score"
-                    android:textAllCaps="false"
-                    android:textColor="@color/background"
-                    android:textSize="20sp" />
+            <Button
+                android:id="@+id/highScore"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@color/light"
+                android:text="@string/high_score"
+                android:textAllCaps="false"
+                android:textColor="@color/background"
+                android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/help"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:background="@color/light"
-                    android:text="@string/rules"
-                    android:textAllCaps="false"
-                    android:textColor="@color/background"
-                    android:textSize="20sp" />
+            <Button
+                android:id="@+id/help"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@color/light"
+                android:text="@string/rules"
+                android:textAllCaps="false"
+                android:textColor="@color/background"
+                android:textSize="20sp" />
 
-            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
